--- a/themes/pinout.yaml
+++ b/themes/pinout.yaml
@@ -1,4 +1,4 @@
-####################### PINOUT THEME ######################
+####################### PIN ######################
 
 Pinout:
   # Colors
@@ -9,16 +9,17 @@ Pinout:
   subtext3: "#414141" 
   subtext4: "#d4d0cf" 
 
+  surface4: "#ccc8c7"
   surface3: "#bab5b4"
   surface2: "#a19d9c" 
-  surface1: "#7c7b7a" 
+  surface1: "#7c7b7a"
   surface0: "#e9e9e9" 
 
   overlay0: "#f7e9df" 
   overlay1: "#9e9895" 
 
-  base: "#d9d5d4" 
-  mantle: "#b2abab"
+  base: "#e9e9e9"
+  mantle: "#b2abab" 
 
 
   # colors 
@@ -26,16 +27,17 @@ Pinout:
   flamingo: "#eebebe"
   pink: "#f4b8e4"
   mauve: "#ca9ee6"
-  red: "#e78284"
+  red: "#a0284e"
   maroon: "#ea999c"
   peach: "#ef9f76"
-  yellow: "#e5c890"
-  green: "#a6d189"
+  yellow: "#f2da65" 
+  green: "#a3e089" 
   teal: "#175973"
-  sea: "#0b7b84" 
+  sea: "#0b7b84"
   sapphire: "#85c1dc"
-  blue: "#211db1"
+  blue: "#4a8fd3"
   lavender: "#babbf1"
+  beige: "#a19d9c"
 
   ###########################
 
@@ -55,8 +57,8 @@ Pinout:
   secondary-background-color: var(--base)
 
   # Text
-  primary-text-color: var(--subtext1)
-  secondary-text-color: var(--subtext3)
+  primary-text-color: var(--subtext3)
+  secondary-text-color: var(--subtext1)
 
   # Sidebar
   sidebar-background-color: var(--surface2)
@@ -65,16 +67,19 @@ Pinout:
 
   sidebar-icon-color: var(--text)
   sidebar-text-color: var(--text)
-  sidebar-selected-icon-color: var(--overlay0)
-  sidebar-selected-text-color: var(--overlay0)
+  sidebar-selected-icon-color: var(--text)
+  sidebar-selected-text-color: var(--text)
 
   # Buttons
   paper-item-icon-color: var(--teal)
   paper-item-icon-active-color: var(--sea)
   mdc-theme-primary: var(--teal)
+  mdc-theme-on-primary: var(--text)
+  mdc-theme-text-disabled-on-light: var(--subtext3);
+
 
   # States and Badges
-  state-icon-color: var(--blue)
+  state-icon-color: var(--sea)
   state-icon-active-color: var(--teal)
 
   state-icon-unavailable-color: var(--base)
@@ -96,10 +101,10 @@ Pinout:
   label-badge-gray: var(--overlay0)
 
   # Cards
-  card-background-color: var(--surface0)
+  card-background-color: var(--text)
   ha-card-background: var(--card-background-color)
- 
-  ha-card-border-radius: "25px"
+  ha-card-border-color: var(--surface4)
+  ha-card-border-radius: "15px"
   ha-card-box-shadow: "none"
   ha-chip-background-color: var(--subtext3)
   paper-dialog-color: var(--secondary-text-color)
@@ -134,10 +139,10 @@ Pinout:
 
   # Checkboxes
   mdc-select-fill-color: var(--surface0)
-  mdc-select-ink-color: var(--sea)
+  mdc-select-ink-color: var(--subtext3)
   mdc-select-label-ink-color: var(--subtext1)
   mdc-select-idle-line-color: var(--text)
-  mdc-select-dropdown-icon-color: var(--teal)
+  mdc-select-dropdown-icon-color: var(--subtext1)
   mdc-select-hover-line-color: var(--overlay0)
   mdc-theme-text-icon-on-background: var(--subtext3)
   mdc-theme-text-primary-on-background: "#333"
@@ -145,6 +150,9 @@ Pinout:
   mdc-checkbox-unchecked-color: var(--subtext3) 
   mdc-theme-secondary: var(--teal)
   mdc-dialog-content-ink-color: var(--subtext3)
+  mdc-ripple-hover-opacity: 0.2
+  mdc-icon-button-icon-color: var(--red)
+  
 
   # Input
   input-fill-color: var(--text)
@@ -155,7 +163,6 @@ Pinout:
   input-hover-line-color: var(--overlay0)
   mdc-text-field-ink-color: var(--subtext3) 
   mdc-text-field-fill-color: var(--text) 
-  
 
   # Toast
   paper-toast-background-color: var(--teal)
@@ -165,15 +172,22 @@ Pinout:
   error-color: var(--red)
   warning-color: var(--yellow)
   success-color: var(--green)
-  info-color: var(--sea)
 
+  # states
   state-on-color: var(--green)
   state-off-color: var(--red)  
-  state-sun-above_horizon-color: "rgb(244, 195, 59)"
+  state-climate-auto-color: var(--teal)
+  state-climate-heat-color: var(--red) 
+  state-climate-cool-color: var(--blue)
+  state-climate-inactive-color: var(--beige)
+  state-sun-above_horizon-color: "#fbbd3c"
+  state-sun-below_horizon-color: "#bae1ff"
   
   # additional things
   hacs-new-color: var(--teal)
   hcv-color-markdown-background: "#ebebeb"
-  hcv-text-color-on-background: "black"
+  hcv-text-color-on-background: var(--subtext3)
+  info-color: var(--sea)
   hacs--default-icon-color: var(--subtext3)
   ha-chip-text-color: var(--text)
+ 
