returned theme name

--- a/themes/pinout.yaml
+++ b/themes/pinout.yaml
@@ -1,4 +1,4 @@
-####################### PIN ######################
+####################### PINOUT THEME ######################
 
 Pinout:
   # Colors
